Fix tab label alignment with throbber

--- a/chrome/_tabbar.css
+++ b/chrome/_tabbar.css
@@ -214,7 +214,8 @@
 	opacity: 1 !important;
 }
 
-.tabbrowser-tab[image]:not([image^="chrome://branding/"]) .tab-label-container
+.tabbrowser-tab[image]:not([image^="chrome://branding/"]) .tab-label-container,
+.tabbrowser-tab:-moz-any([progress], [busy]) .tab-label-container
 {
 	padding-inline-start: 8px !important;
 }
@@ -249,6 +250,7 @@
 	fill: currentColor !important;
 	fill-opacity: .7 !important;
 	background-image: url(spinner-busy.svg) !important;
+	margin: 0 !important;
 }
 
 .tab-throbber::before,
@@ -266,11 +268,6 @@
 
 /* clipped tabs */
 #tabbrowser-tabs[closebuttons=activetab] .tab-content:not([pinned])
-{
-	padding-inline-start: 8px !important;
-}
-
-#tabbrowser-tabs[closebuttons=activetab] .tabbrowser-tab[image]:not([image^="chrome://branding/"]) .tab-label-container
 {
 	padding-inline-start: 8px !important;
 }
